# orchestra

./: .env.example  .gitignore  README.md  app.py  cdk.json  pyproject.toml  pytest.ini
orchestra/: orchestra_stack.py
src/: app.py
src/api/: websocket_api.py  workflows_api.py
src/ddb_workflow/: orchestrator_lambda.py  orchestrator_lambda.py.backup  worker_lambda.py  workflow_types.py
src/lambdas/container_b3/: Dockerfile
src/lambdas/container_b3/app/: handler.py
src/lambdas/node/lambda_a/: index.mjs
src/lambdas/node/lambda_b1/: index.mjs
src/lambdas/node/lambda_c/: index.mjs
src/lambdas/python/lambda_b2/: handler.py
src/orchestra/: __init__.py
src/stacks/: api_stack.py  frontend_stack.py  monitoring_stack.py  orchestration_stack.py  payload_stack.py  workflow_management_stack.py
tests/: conftest.py
tests/unit/: test_invoke_all.py  test_orchestra_stack.py  test_orchestrator_lambda.py  test_worker_lambda.py  test_workflow_types.py
tools/: invoke_all.py
web/workflow-dashboard/: .env.backup  index.html  package.json
web/workflow-dashboard/public/: config.js
web/workflow-dashboard/src/: App.css  App.tsx
web/workflow-dashboard/src/components/: WorkflowGraph.tsx  WorkflowList.tsx
web/workflow-dashboard/src/hooks/: useWebSocket.ts
